# alpm-node

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
__test__/: enums.spec.ts  handle.spec.ts  local-db.spec.ts  sync-db.spec.ts  version.spec.ts
examples/: basic.ts
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: dependency.rs  enums.rs  error.rs  handle.rs  lib.rs  package.rs  version.rs
