[package]
name = "alpm-napi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
alpm = { version = "5", default-features = false, features = ["pkg-config"] }
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
